# kobonotes

./: .gitignore  Makefile  README.md  cabal.project.local  generate.sh  kobonotes.cabal
app/: Main.hs
src/: Extraction.hs  Generation.hs  Main.hs  Types.hs
src/Kobonotes/: Extraction.hs  Generation.hs  Types.hs
template/: styles.css  template.html  template.tex
test/: .gitignore  Makefile  report.md  styles.css
