cabal-version:       >=1.10

name:                kobonotes
version:             0.1.0.0
synopsis:            Extract notes and highlights from Kobo device into a markdown file
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Daniel Campoverde
maintainer:          alx@sillybytes.net
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable kobonotes
  main-is:             Main.hs
  other-modules:
                       Types
                     , Extraction
  -- other-extensions:
  build-depends:       base          >=4.13     && <4.14
                     , time          >=1.9.3    && <2.0.0
                     , text          >=1.2.3.2  && <2.0.0
                     , sqlite-simple >=0.4.18.0 && <0.5.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
