cabal-version:       2.4
name:                kobonotes
version:             0.1.0.0
synopsis:            Extract notes and highlights from Kobo device into a markdown file
license-file:        LICENSE
author:              Daniel Campoverde
maintainer:          alx@sillybytes.net
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Kobonotes.Types
                     , Kobonotes.Extraction
                     , Kobonotes.Generation
  build-depends:       base
                     , time          >=1.9.3    && <2.0.0
                     , text          >=1.2.3.2  && <2.0.0
                     , sqlite-simple >=0.4.18.0 && <0.5.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010

executable kobonotes
  main-is:             Main.hs
  build-depends:       base
                     , kobonotes
                     , time
                     , text
  hs-source-dirs:      app
  default-language:    Haskell2010
